--- a/app/src/main/res/layout/activity_howtoplay.xml
+++ b/app/src/main/res/layout/activity_howtoplay.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backg2"
     tools:context=".howtoplay">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/next"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="610dp"
+        android:fontFamily="@font/cardo"
+
+        android:text="next" />
+</RelativeLayout>
