--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/m"
     tools:context=".play">
+    <ImageButton
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/gback"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        />
+
+    <ImageView
+        android:layout_below="@+id/btn"
+        android:id="@+id/img"
+        android:layout_width="350dp"
+        android:layout_height="600dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp"
+
+
+        />
+
+    <Button
+        android:id="@+id/result"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/img"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/cardo"
+        android:text="Crysrall ball" />
+
+</RelativeLayout>
