--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backg3"
     tools:context=".result">
+    <ImageView
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/imgR"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="75dp"
+
+
+        />
+
+    <Button
+        android:id="@+id/trya"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_below="@+id/imgR"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="270dp"
+        android:fontFamily="@font/cardo"
+        android:text="Try again" />
+
+
+</RelativeLayout>
