--- a/app/src/main/res/layout/activity_howtoplay.xml
+++ b/app/src/main/res/layout/activity_howtoplay.xml
@@ -9,10 +9,12 @@
 
     <Button
         android:id="@+id/next"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
+        android:layout_width="259dp"
+        android:layout_height="159dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="105dp"
-        android:layout_marginTop="610dp"
+        android:layout_marginTop="600dp"
+        android:background="@drawable/next"
         android:fontFamily="@font/cardo"
 
         android:text="next" />
