--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/m"
     tools:context=".play">
-    <ImageButton
+
+    <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/gback"
-        />
+        android:layout_width="61dp"
+        android:layout_height="53dp"
+
+        android:background="@drawable/resource_return" />
 
 
         />
@@ -20,7 +21,7 @@
         android:layout_below="@+id/btn"
         android:id="@+id/img"
         android:layout_width="350dp"
-        android:layout_height="600dp"
+        android:layout_height="570dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="5dp"
 
@@ -29,12 +30,14 @@
 
     <Button
         android:id="@+id/result"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="155dp"
+        android:layout_height="86dp"
         android:layout_below="@+id/img"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/cardo"
-        android:text="Crysrall ball" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/tapp"
+
+        />
 
 </RelativeLayout>
