--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -25,6 +25,12 @@
         android:layout_marginLeft="105dp"
         android:layout_marginTop="270dp"
         android:fontFamily="@font/cardo"
+
+        android:textColor="#03142C"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:background="@drawable/shape"
         android:text="Try again" />
 
 
